<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Meteo</string>
    <string name="titre">Meteo sur </string>
    <string name="city">Angers</string>
    <string name="pression">Pression :</string>
    <string name="humidite">Humidité :</string>
    <string name="vent">Vent :</string>
    <string name="ventDirection">Direction Vent :</string>
    <string name="temperature">Température :</string>
    <string name="aujourdhui">Aujourd\'hui</string>
    <string name="description">Description</string>
    <string name="J1">J+1</string>
    <string name="J2">J+2</string>
    <string name="J3">J+3</string>
    <string name="J4">J+4</string>
    <string name="J5">J+5</string>
    <string name="action_settings">Settings</string>


</resources>
